[package]
name = "cea708-types"
description = "Closed Caption 708 types, parser and serializer"
version = "0.2.1"
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT"
edition = "2021"
keywords = ["multimedia", "captions"]
categories = ["multimedia::encoding"]
documentation = "https://docs.rs/cea708-types"
repository = "https://github.com/ystreet/cea708-types"

[dependencies]
once_cell = "1"
muldiv = "1"
log = "0.4"
env_logger = "0.10"
