[package]
name = "cea708-types"
description = "Closed Caption 708 types, parser and serializer"
version = "0.3.2"
authors = ["Matthew Waters <matthew@centricular.com>"]
license = "MIT"
edition = "2021"
keywords = ["multimedia", "captions"]
categories = ["multimedia::encoding"]
documentation = "https://docs.rs/cea708-types"
repository = "https://github.com/ystreet/cea708-types"
rust-version = "1.63.0"

[dependencies]
log = "0.4"
muldiv = "1"
once_cell = "1"
thiserror = "1"

[dev-dependencies]
env_logger = "0.10"
